--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -30,6 +30,7 @@
     .card {
       height: 600px;
       margin-right: 1px;
+      cursor: pointer;
       // flex: 0 0 33.33333%;
 
       .options {
