--- a/src/styles/input.scss
+++ b/src/styles/input.scss
@@ -1,5 +1,11 @@
 button {
   cursor: pointer;
+
+  &.button-unstyled {
+    background: transparent;
+    outline: none;
+    border: 0;
+  }
 }
 
 .button {
