--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -28,6 +28,11 @@
       border-radius: 4px;
       padding: 10px 16px;
     }
+
+    #search {
+      color: #f65261;
+      font-size: 1.4em;
+    }
   }
 
   main {
@@ -87,6 +92,83 @@
         color: #ffffff;
       }
     }
+  }
+}
+
+#movie-header {
+  display: flex;
+  // flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 20px 0;
+
+  #movie-details {
+    padding: 0 3em;
+  }
+
+  #movie-title {
+    margin-bottom: 1.5rem;
+
+    h1 {
+      margin-top: 0;
+      margin-bottom: 0em;
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+
+      span {
+        mix-blend-mode: normal;
+        border: 1px solid #979797;
+        color: #ffffff;
+        border-radius: 50%;
+        font-weight: 400;
+        font-size: 0.5em;
+        text-align: center;
+        padding: 0 8px;
+        margin-top: 0;
+        margin-bottom: 0;
+        margin-left: 1em;
+      }
+    }
+
+    h2 {
+      font-family: 'Montserrat';
+      font-style: normal;
+      font-weight: 300;
+      font-size: 0.8em;
+      line-height: 17px;
+      opacity: 0.5;
+      margin-bottom: 2em;
+    }
+  }
+
+  #movie-info {
+    margin-bottom: 1.5rem;
+    display: flex;
+    flex-wrap: wrap;
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 29px;
+    color: #f65261;
+
+    div:nth-child(1) {
+      padding-right: 2rem;
+    }
+  }
+
+  #movie-overview {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 300;
+    font-size: 1em;
+    line-height: 24px;
+
+    color: #ffffff;
+
+    mix-blend-mode: normal;
+    opacity: 0.5;
   }
 }
 
